RESOLVED FIXED62869
[Qt] [WK2] Compile error in ActivateFontsQt.cpp on Mac
https://bugs.webkit.org/show_bug.cgi?id=62869
Summary [Qt] [WK2] Compile error in ActivateFontsQt.cpp on Mac
Viatcheslav Ostapenko
Reported 2011-06-17 09:49:45 PDT
On Mac OS X 10.6.7 with Qt 4.7.3 : /Users/sl/work/webkit/Tools/WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp: In function ‘void WTR::activateFonts()’: /Users/sl/work/webkit/Tools/WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:92: error: variable ‘QFont f’ has initializer but incomplete type /Users/sl/work/webkit/Tools/WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:94: error: incomplete type ‘QFont’ used in nested name specifier /Users/sl/work/webkit/Tools/WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:95: error: incomplete type ‘QFont’ used in nested name specifier make[2]: *** [obj/debug/ActivateFontsQt.o] Error 1 make[1]: *** [sub-InjectedBundle-qt-InjectedBundle-pro-make_default] Error 2 make: *** [sub-WebKitTestRunner-WebKitTestRunner-pro-make_default-ordered] Error 2
Attachments
Compile error fix. (1.02 KB, patch)
2011-06-17 10:01 PDT, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2011-06-17 10:01:22 PDT
Created attachment 97609 [details] Compile error fix.
WebKit Review Bot
Comment 2 2011-06-20 03:36:09 PDT
Comment on attachment 97609 [details] Compile error fix. Clearing flags on attachment: 97609 Committed r89241: <http://trac.webkit.org/changeset/89241>
WebKit Review Bot
Comment 3 2011-06-20 03:36:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.