2011-06-20  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

Reviewed by Andreas Kling.

        [Qt] [WK2] Compile error in ActivateFontsQt.cpp on Mac
        https://bugs.webkit.org/show_bug.cgi?id=62869

        Add QFont include to fix "incomlete type QFont" error.

        * WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@89241 bbb929c8-8fbe-4397-9dbb-9b2b20218538