third_party/WebKit/Tools/WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp
@@ -34,6 +34,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QApplication>
 #include <QByteArray>
 #include <QDir>
+#include <QFont>
 #include <QWindowsStyle>
 
 #ifdef Q_WS_X11
